--- a/PHANTASMAGORIUM/style.css
+++ b/PHANTASMAGORIUM/style.css
@@ -33,12 +33,8 @@ body {
 	animation: scrollBackground 10s linear infinite;
 }
 @keyframes scrollBackground {
-	from {
-		background-position: 0 0;
-	}
-	to {
-		background-position: -100% 100%;
-	}
+	from {background-position: 0 0;}
+	to {background-position: -100% 100%;}
 }
 * {
 	box-sizing: border-box;
@@ -399,30 +395,33 @@ article > div {
 	gap: 20px;
 	margin: 0 150px;
 }
-article p {
-	border: none;
-	background: none;
-	border-radius: 10px;
-	font-size: 14pt;
-	margin: 20px 0 10px 0;
-	padding: 10px;
+article {
+	p {
+		border: none;
+		background: none;
+		border-radius: 10px;
+		font-size: 14pt;
+		margin: 20px 0 10px 0;
+		padding: 10px;
+	}
+	h1 {
+		border-radius: 10px;
+		font-size: 30pt;
+		margin: 30px 140px 10px 90px;
+		padding: 10px;
+	}
+	h2 {
+		border-radius: 10px;
+		font-size: 20pt;
+		margin: 10px 150px 0 115px;
+		padding: 10px;
+	}
+	hr {
+		margin-top: 10px;
+		margin-bottom: 10px;
+	}
 }
-article h1 {
-	border-radius: 10px;
-	font-size: 30pt;
-	margin: 30px 140px 10px 90px;
-	padding: 10px;
-}
-article h2 {
-	border-radius: 10px;
-	font-size: 20pt;
-	margin: 10px 150px 0 115px;
-	padding: 10px;
-}
-article hr {
-	margin-top: 10px;
-	margin-bottom: 10px;
-}
+article 
 
 /* Collapsible */
 .collapsible {
@@ -440,7 +439,7 @@ article hr {
 }
 .collapsible:hover {
  	background-color: white;
-	color: #282454;
+	color: #073B3A;
 	font-weight: bold;
 	font-size: 25px;
 	text-transform: uppercase;
